Optimized code & imports