@@ -2,13 +2,13 @@ package pwn.noobs.trouserstreak.modules;
 
 import meteordevelopment.meteorclient.events.game.GameJoinedEvent;
 import meteordevelopment.meteorclient.events.world.TickEvent;
+import meteordevelopment.meteorclient.gui.utils.StarscriptTextBoxRenderer;
 import meteordevelopment.meteorclient.settings.*;
 import meteordevelopment.meteorclient.systems.macros.Macros;
 import meteordevelopment.meteorclient.systems.modules.Module;
+import meteordevelopment.meteorclient.utils.misc.MeteorStarscript;
 import meteordevelopment.meteorclient.utils.player.ChatUtils;
 import meteordevelopment.orbit.EventHandler;
-import meteordevelopment.meteorclient.gui.utils.StarscriptTextBoxRenderer;
-import meteordevelopment.meteorclient.utils.misc.MeteorStarscript;
 import pwn.noobs.trouserstreak.Trouser;
 
 import java.util.Arrays;
@@ -18,24 +18,16 @@ import java.util.Queue;
 
 public class AutoCommand extends Module {
     private final SettingGroup sgGeneral = settings.getDefaultGroup();
-    private final Setting<Mode> mode = sgGeneral.add(new EnumSetting.Builder<Mode>()
-            .name("mode")
-            .description("Where to get list of commands from")
-            .defaultValue(Mode.Manual1)
-            .build()
-    );
     public final Setting<Boolean> auto = sgGeneral.add(new BoolSetting.Builder()
             .name("Loop Commands")
             .description("Loops the commands executed.")
             .defaultValue(false)
             .build()
     );
-    private final Setting<Integer> commandDelay = sgGeneral.add(new IntSetting.Builder()
-            .name("command-delay")
-            .description("Tick delay between each command")
-            .defaultValue(1)
-            .min(0)
-            .sliderMax(100)
+    private final Setting<Mode> mode = sgGeneral.add(new EnumSetting.Builder<Mode>()
+            .name("mode")
+            .description("Where to get list of commands from")
+            .defaultValue(Mode.Manual1)
             .build()
     );
     private final Setting<List<String>> commands1 = sgGeneral.add(new StringListSetting.Builder()
@@ -65,19 +57,26 @@ public class AutoCommand extends Module {
     private final Setting<List<String>> commands3 = sgGeneral.add(new StringListSetting.Builder()
             .name("commands")
             .description("List of commands to be sent. Supports Starscript.")
-            .defaultValue(Arrays.asList(
+            .defaultValue(List.of(
                     "/execute at @a run summon fireball ~ ~10 ~ {ExplosionPower:127b, Motion:[0.0,-5.0,0.0]}"
             ))
             .renderer(StarscriptTextBoxRenderer.class)
             .visible(() -> mode.get() == Mode.Manual3)
             .build()
     );
-
     private final Setting<String> macroName = sgGeneral.add(new StringSetting.Builder()
             .name("macro-name")
             .description("The name of the macro to run")
             .defaultValue("op")
             .visible(() -> mode.get() == Mode.Macro)
+            .build()
+    );
+    private final Setting<Integer> commandDelay = sgGeneral.add(new IntSetting.Builder()
+            .name("command-delay")
+            .description("Tick delay between each command")
+            .defaultValue(1)
+            .min(0)
+            .sliderMax(100)
             .build()
     );
     private final Setting<Integer> permissionLevel = sgGeneral.add(new IntSetting.Builder()
@@ -152,37 +151,34 @@ public class AutoCommand extends Module {
     }
 
     private void ZeroTickRunCommands() {
-        if(mode.get() == Mode.Manual1) for(String command : commands1.get()) {
+        if (mode.get() == Mode.Manual1) for (String command : commands1.get()) {
             String processedCommand = MeteorStarscript.run(MeteorStarscript.compile(command));
-            if (processedCommand.length()<=256){
+            if (processedCommand.length() <= 256) {
                 ChatUtils.sendPlayerMsg(processedCommand);
-            }
-            else {
-                int characterstodelete = processedCommand.length()-256;
-                error("This command is too long ("+processedCommand+"). Shorten it by "+characterstodelete+" characters.");
+            } else {
+                int characterstodelete = processedCommand.length() - 256;
+                error("This command is too long (" + processedCommand + "). Shorten it by " + characterstodelete + " characters.");
             }
         }
-        if(mode.get() == Mode.Manual2) for(String command : commands2.get()) {
+        if (mode.get() == Mode.Manual2) for (String command : commands2.get()) {
             String processedCommand = MeteorStarscript.run(MeteorStarscript.compile(command));
-            if (processedCommand.length()<=256){
+            if (processedCommand.length() <= 256) {
                 ChatUtils.sendPlayerMsg(processedCommand);
-            }
-            else {
-                int characterstodelete = processedCommand.length()-256;
-                error("This command is too long ("+processedCommand+"). Shorten it by "+characterstodelete+" characters.");
+            } else {
+                int characterstodelete = processedCommand.length() - 256;
+                error("This command is too long (" + processedCommand + "). Shorten it by " + characterstodelete + " characters.");
             }
         }
-        if(mode.get() == Mode.Manual3) for(String command : commands3.get()) {
+        if (mode.get() == Mode.Manual3) for (String command : commands3.get()) {
             String processedCommand = MeteorStarscript.run(MeteorStarscript.compile(command));
-            if (processedCommand.length()<=256){
+            if (processedCommand.length() <= 256) {
                 ChatUtils.sendPlayerMsg(processedCommand);
-            }
-            else {
-                int characterstodelete = processedCommand.length()-256;
-                error("This command is too long ("+processedCommand+"). Shorten it by "+characterstodelete+" characters.");
+            } else {
+                int characterstodelete = processedCommand.length() - 256;
+                error("This command is too long (" + processedCommand + "). Shorten it by " + characterstodelete + " characters.");
             }
         }
-        if(mode.get() == Mode.Macro) {
+        if (mode.get() == Mode.Macro) {
             try {
                 Macros.get().get(macroName.get()).onAction();
             } catch (NullPointerException ex) {
